--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,13 +34,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/BankingSys
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Admin\\Desktop\\jcalendar-1.4.jar~\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=C:\\Users\\HT\\Desktop\\FPT\\da1\\BankingManager\\lib\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
